# GravityReversi

./: .gitignore  CMakeLists.txt  README.md  antigravity.md  antigravity.py  roadmap.md  technical.md
src/: main.cpp
src/agents/: .gitkeep  GreedyAgent.cpp  GreedyAgent.h  IPlayer.h  MinimaxAgent.cpp  MinimaxAgent.h  RandomAgent.cpp  RandomAgent.h
src/controller/: .gitkeep
src/core/: BitBoard.cpp  BitBoard.h
src/gui/: .gitkeep  BoardWidget.cpp  BoardWidget.h  MainWindow.cpp  MainWindow.h
tests/: test_bitboard.cpp  test_greedyagent.cpp  test_minimaxagent.cpp  test_randomagent.cpp  test_rules.cpp
